ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/RC_limit_enabled_Dealer__c.field-meta.xml
<CustomField>
    <fullName>RC_limit_enabled_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RC limit enabled Dealer</label>
    <type>Checkbox</type>
</CustomField>