ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/RC_retention_applicable__c.field-meta.xml
<CustomField>
    <fullName>RC_retention_applicable__c</fullName>
    <label>RC retention applicable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>