ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Registration_Number_Format__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number_Format__c</fullName>
    <description>Registration Number Format field is used to store Vehicle Dedupe values</description>
    <label>Registration Number Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>