ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Frequency__c</fullName>
    <label>Repayment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HALF YEARLY</fullName>
            </value>
            <value>
                <fullName>QUARTERLY</fullName>
            </value>
            <value>
                <fullName>MONTHLY</fullName>
            </value>
            <value>
                <fullName>BI-MONTHLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>