ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Repayment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Mode__c</fullName>
    <label>Repayment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>E-NACH</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>