ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Required_CRM_IRR__c.field-meta.xml
<CustomField>
    <fullName>Required_CRM_IRR__c</fullName>
    <label>Required CRM IRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>