ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Required_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Required_Tenure__c</fullName>
    <label>Required Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>