ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Serial_number__c.field-meta.xml
<CustomField>
    <fullName>Serial_number__c</fullName>
    <label>Serial number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>