ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/SLA_Number__c.field-meta.xml
<CustomField>
    <fullName>SLA_Number__c</fullName>
    <label>SLA Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>