ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Total_Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Funded_Amount__c</fullName>
    <label>Total Funded Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>