ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Type_of_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Dealer__c</fullName>
    <label>Type of Dealer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>sub dealer</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>