ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
                <default>true</default>
                <label>Personal</label>
            </value>
            <value>
                <fullName>UsageTransport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>