ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Valuation_Decisioning__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Decisioning__c</fullName>
    <label>Valuation Decisioning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>