ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Valuation_price__c.field-meta.xml
<CustomField>
    <fullName>Valuation_price__c</fullName>
    <label>Valuation price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>