ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Valuation_Price_Max__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Price_Max__c</fullName>
    <description>This field is coming from Aggregator D2C</description>
    <label>Valuation Price Max</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>