ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Valuation_Price_Min__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Price_Min__c</fullName>
    <description>This field is coming from D2C Aggregator</description>
    <label>Valuation Price Min</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>