ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Valuer__c.field-meta.xml
<CustomField>
    <fullName>Valuer__c</fullName>
    <label>Valuer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Valuer-1</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Valuer-2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>