ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Valuer_category__c.field-meta.xml
<CustomField>
    <fullName>Valuer_category__c</fullName>
    <label>Valuer category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empanelled</fullName>
            </value>
            <value>
                <fullName>MFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>