ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Valuer_code__c.field-meta.xml
<CustomField>
    <fullName>Valuer_code__c</fullName>
    <label>Valuer code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>