ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Variant_Code__c.field-meta.xml
<CustomField>
    <fullName>Variant_Code__c</fullName>
    <label>Variant Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>