ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Variation__c.field-meta.xml
<CustomField>
    <fullName>Variation__c</fullName>
    <formula>Invoice_Price__c  -  DLP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>