ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Category__c</fullName>
    <label>Vehicle Category</label>
    <length>1</length>
    <type>Text</type>
</CustomField>