ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Class__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Class__c</fullName>
    <label>Vehicle Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>