ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Delivered__c</fullName>
    <label>Vehicle Delivered</label>
    <length>3</length>
    <type>Text</type>
</CustomField>