ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Detail_City_State_Master__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Detail_City_State_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Detail City State Master</label>
    <referenceTo>City_State_Master__c</referenceTo>
    <relationshipName>Vehicle_Details</relationshipName>
    <type>Lookup</type>
</CustomField>