ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Details_MFC_State_Master__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Details_MFC_State_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Details MFC State Master</label>
    <referenceTo>MFC_State_Master__c</referenceTo>
    <relationshipLabel>Vehicle Details</relationshipLabel>
    <relationshipName>Vehicle_Details</relationshipName>
    <type>Lookup</type>
</CustomField>