ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Documents__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Documents__c</fullName>
    <label>Vehicle Documents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Insurance Policy</fullName>
            </value>
            <value>
                <fullName>RC Copy</fullName>
            </value>
            <value>
                <fullName>Vehicle Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>