ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_inspection_approved_by_CVO__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_inspection_approved_by_CVO__c</fullName>
    <label>Vehicle inspection approved by CVO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>