ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Inspection_RC_Limit_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Inspection_RC_Limit_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Inspection RC Limit Submitted</label>
    <type>Checkbox</type>
</CustomField>