ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Place_Of_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Place_Of_Valuation__c</fullName>
    <label>Vehicle&apos;s Place Of Valuation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>