ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Proceed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Proceed_Flag__c</fullName>
    <description>Tractor Vehicle dedupe field</description>
    <label>Vehicle Proceed Flag</label>
    <length>18</length>
    <type>Text</type>
</CustomField>