ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Reg_No_during_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Reg_No_during_Inspection__c</fullName>
    <label>Vehicle Reg No during Inspection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>