ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_registered_in_the_name_of__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_registered_in_the_name_of__c</fullName>
    <label>Vehicle registered in the name of</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
                <default>true</default>
                <label>Borrower</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>