ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_SubCategory__c</fullName>
    <description>Vehicle SubCategory is used to store Vehicle Details value from dedupe screen</description>
    <label>Vehicle SubCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>