ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_SubType__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_SubType__c</fullName>
    <label>Vehicle SubType</label>
    <length>15</length>
    <type>Text</type>
</CustomField>