ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_type__c</fullName>
    <label>Vehicle type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>