ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Vehicle_Verified__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tractor Vehicle dedupe field</description>
    <label>Vehicle Verified</label>
    <type>Checkbox</type>
</CustomField>