ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/What_is_emi_convyed_to_customer__c.field-meta.xml
<CustomField>
    <fullName>What_is_emi_convyed_to_customer__c</fullName>
    <label>What is emi convyed to customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>