ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/What_is_thePrice_of_TractorHarvester__c.field-meta.xml
<CustomField>
    <fullName>What_is_thePrice_of_TractorHarvester__c</fullName>
    <label>What is thePrice of TractorHarvester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>