ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/X1st_yr_Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>X1st_yr_Insurance_Premium__c</fullName>
    <label>1st yr Insurance Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>