ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application__c</columns>
    <columns>Product__c</columns>
    <columns>Model__c</columns>
    <columns>Vehicle_type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>isOEMDealerChecked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Application__c</field>
        <operation>equals</operation>
        <value>L13062404084</value>
    </filters>
    <label>All</label>
</ListView>